syntax = "proto3";

package gurdwara.schedule.service;

service ScheduleService {
    rpc GetMonth(MonthInfo) returns (Month) {}
    rpc CreateEvent(Event) returns (EventRes) {}
    //rpc GetDays(DaysInfo) returns (stream Day) {}
    //rpc GetEvents(MonthInfo) returns (stream Event) {}
}

message MonthInfo {
    int32 Year = 1;
    int32 MonthNum = 2;
}

message EventsInfo {
    string StartDateTime = 1;
    string EndDateTime = 2;
}

message EventRes {
    string InsertID = 1;
}

message Month {
    string ID = 1;
    int32 MonthNum = 2;
    repeated Day Days = 3;
    int32 Year = 4;
}

message Day {
    string ID = 1;
    string Date = 2;
    int32 WeekdayNum = 3;
    repeated Event Events = 4;
}

message Event {
    string ID = 1;
    string StartDateTime = 2;
    string EndDateTime = 3;
    string Organizer = 4;
    string Title = 5;
    string Description = 6;
}


